--- a/templates/admin/adminBugSolution.html.twig
+++ b/templates/admin/adminBugSolution.html.twig
@@ -6,7 +6,7 @@
      <div class="col-lg-4"></div>
      <div class="col-lg-8">
       <div class="top-text header-text">
-       <h2>Proposer un bug</h2>
+       <h2>Ajouter/modifier une solution de bug</h2>
       </div>
      </div>
      <div class="col-lg-4"></div>
@@ -21,33 +21,27 @@
       <div class="naccs">
        <div class="grid">
         <div class="row">
-        {{ form_start(bugSolutionForm, {'method': 'POST', 'attr':{'id': 'search-form', 'name': 'bugForm', 'class': 'bugForm'}}) }}
-        <div class="row">
-           <div class="col-lg-12 bugFormSpaces">
-            <fieldset>
-             <div class="col-lg-12 bugInsideFormSpaces">
-               {{form_row(bugSolutionForm.imgBugSolution)}}
-        
 
-        {{ form_end(bugSolutionForm) }}
-         <form id="search-form" name="sB" method="submit" role="search" action="#">
+         {{ form_start(bugSolutionForm, {'method': 'POST', 'attr':{'id': 'search-form', 'name': 'sB'}}) }}
           <div class="row">
+
            <div class="col-lg-12 bugFormSpaces">
             <fieldset>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionTitle">Titre de la solution du bug:</label>
-              <input type="text" class="inputBugForm" name="bugSolutionTitle">
+              {{ form_row(bugSolutionForm.idBug, {'label':'Bug associé :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionImage">Image solution bug:</label>
-              <input type="file" name="bugSolutionImage">
+              {{ form_row(bugSolutionForm.titleBugSolution, {'label':'Titre solution :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionText">Texte de la solution du bug :</label>
-              <textarea id="bugSolutionText" class="textareaBugCreation" name="bugSolutionText"></textarea>
+              {{ form_row(bugSolutionForm.textBugSolution, {'label':'Texte solution :', 'attr': {'class': 'textareaBugCreation'}}) }}
+             </div>
+             <div class="col-lg-12 bugInsideFormSpaces">
+              {{ form_row(bugSolutionForm.imgBugSolution, {'label':'Image solution :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
             </fieldset>
            </div>
+
            <div class="col-lg-4"></div>
            <div class="col-lg-4"></div>
            <div class="col-lg-4">
@@ -55,7 +49,7 @@
            </div>
 
           </div>
-         </form>
+         {{ form_end(bugSolutionForm) }}
         </div>
        </div>
       </div>
@@ -63,4 +57,4 @@
     </div>
    </div>
   </div>
- {% endblock %}
+{% endblock %}
