--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -95,19 +95,29 @@
                 <footer>
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-4">
+                            <div class="col-lg-2">
                                 <div class="about">
                                     <p> <a href="{{ path('homePage') }}">Accueil</a></p>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-2">
                                 <div class="helpful-links">
                                     <a href="{{ path('contactPage') }}">Contact</a>
                                 </div>
                             </div>
                             <div class="col-lg-4">
+                                <div class="helpful-links">
+                                    <a href="{{ path('adminGestionBugsPage') }}">Gestion Admin</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-2">
                                 <div class="contact-us">
-
+                                <a href="https://www.facebook.com/DebugGaming"><img class="socialLogos" src="{{ asset('assets/images/facebook_logo.png') }}" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <div class="contact-us">
+                                <a href="https://twitter.com/debug_gaming"><img class="socialLogos" src="{{ asset('assets/images/twitter_logo.png') }}" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-lg-12">
