--- a/public/assets/css/templatemo-plot-listing.css
+++ b/public/assets/css/templatemo-plot-listing.css
@@ -1016,6 +1016,11 @@ button a {
     color : #fff;
 }
 
+.socialLogos {
+    max-height : 25px;
+    width : auto;
+}
+
 .searchText {
     border: none!important;
 }
