--- a/templates/pages/addBugSolution.html.twig
+++ b/templates/pages/addBugSolution.html.twig
@@ -26,33 +26,23 @@
            <div class="col-lg-12 bugFormSpaces">
             <fieldset>
              <div class="col-lg-12 bugInsideFormSpaces">
-               {{form_row(bugSolutionForm.imgBugSolution)}}
-        
-
-        {{ form_end(bugSolutionForm) }}
-         <form id="search-form" name="sB" method="submit" role="search" action="#">
-          <div class="row">
-           <div class="col-lg-12 bugFormSpaces">
-            <fieldset>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionTitle">Titre de la solution du bug:</label>
-              <input type="text" class="inputBugForm" name="bugSolutionTitle">
-             </div>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionImage">Image solution bug:</label>
-              <input type="file" name="bugSolutionImage">
-             </div>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionText">Texte de la solution du bug :</label>
-              <textarea id="bugSolutionText" class="textareaBugCreation" name="bugSolutionText"></textarea>
-             </div>
-            </fieldset>
+               {{form_row(bugSolutionForm.titleBugSolution, {'label':'Titre solution :', 'attr': {'class': 'inputBugForm'}})}}
+              </div>
+              <div class="col-lg-12 bugInsideFormSpaces">
+               {{form_row(bugSolutionForm.textBugSolution, {'label':'Texte solution :', 'attr': {'class': 'textareaBugCreation'}})}}
+              </div>
+              <div class="col-lg-12 bugInsideFormSpaces">
+               {{form_row(bugSolutionForm.imgBugSolution, {'label':'Image solution :', 'attr': {'class': 'inputBugForm'}})}}
+              </div>
+              </fieldset>
            </div>
            <div class="col-lg-4"></div>
            <div class="col-lg-4"></div>
            <div class="col-lg-4">
             <button><input type="submit" name="submitBugButton"></button>
            </div>
+        
+        {{ form_end(bugSolutionForm) }}
 
           </div>
          </form>
