--- a/templates/pages/creationBug.html.twig
+++ b/templates/pages/creationBug.html.twig
@@ -25,7 +25,7 @@
         <div class="col-lg-12 bugFormSpaces">
         <fieldset>
         <div class="col-lg-12 bugInsideFormSpaces">
-        {{ form_row(bugForm.idGame, {'label': 'Jeu concerné par le bug :' }) }}
+        {{ form_row(bugForm.idGame, {'label': 'Jeu concerné par le bug :', 'attr': {'class': 'inputBugForm'} }) }}
         </div>
         <div class="col-lg-12 bugInsideFormSpaces">
             <p class="textAddGame">Le jeu concerné n'est pas dans la liste ? <a href="{{ path('gameCreationPage') }}">Ajoutez-le !</a></p>
@@ -45,10 +45,15 @@
         </div>
         <div class="col-lg-12 bugFormSpaces">
         <h3>Bug Fix</h3>
-        {{ form_row(bugForm.idBugFix.resolved, {'label': 'Titre du Bug :', 'attr': {'class': 'inputBugForm'} }) }}
-        {{ form_row(bugForm.idBugFix.majNumber, {'label': 'Titre du Bug :', 'attr': {'class': 'inputBugForm'} }) }}
-        {{ form_row(bugForm.idBugFix.dateBugFix, {'label': 'Titre du Bug :', 'attr': {'class': 'inputBugForm'} }) }}
+        {{ form_row(bugForm.idBugFix.resolved, {'label': 'Bug résolu ?', 'attr': {'class': 'inputBugForm'} }) }}
+        {{ form_row(bugForm.idBugFix.majNumber, {'label': 'Numéro de mise à jour :', 'attr': {'class': 'inputBugForm'} }) }}
+        {{ form_row(bugForm.idBugFix.dateBugFix, {'label': 'Date de mise à jour :', 'attr': {'class': 'inputBugForm'} }) }}
         </div>
+        <div class="col-lg-4"></div>
+           <div class="col-lg-4"></div>
+           <div class="col-lg-4">
+            <button><input type="submit" name="submitBugButton"></button>
+           </div>
         {{ form_end(bugForm) }}
          
         </div>
